# fastapi_sql_aws_base

./: .coverage  Makefile  README.md  pyproject.toml  requirements.txt
app/: logging_config.py  main.py
app/aws/: s3.py  s3_utils.py
app/db/: crud.py  crud_utils.py  db.py  models.py
app/services/: microservice.py
tests/: test_api.py  test_db.py  test_main.py
