[tool.poetry]
name = "app"
version = "0.1.0"
description = "A FastAPI microservice with async S3, SQL, and microservice integration."
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "*"
uvicorn = "*"
pydantic = "*"
sqlalchemy = {extras = ["asyncio"], version = "*"}
asyncpg = "*"
boto3 = "*"
aioboto3 = "*"
watchtower = "*"
httpx = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
moto = "*"
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
